<resources>
    <string name="app_name">My CV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cv_button">CV</string>
    <string name="imagen_button">Imagen</string>
    <string name="contacto_button">Contacto</string>
    <string name="linkedin_button">Linkedin</string>

    <string name="titulo_datos_personales">Datos personales</string>

    <string name="columna_nombre">Nombre completo:</string>
    <string name="columna_fecha">Fecha de nacimiento:</string>
    <string name="columna_genero">Género</string>
    <string name="columna_nacionalidad">Nacionalidad</string>

    <string name="dato_nombre">Raúl Santana Tilves</string>
    <string name="dato_fecha">07/10/2000</string>
    <string name="dato_genero">Masculino</string>
    <string name="dato_nacionalidad">Española</string>

    <string name="tituloExperiencia">Experiencia Laboral</string>

    <string name="experiencia1">- Técnico Informático en Ayto. de La Oliva - 3 meses</string>
    <string name="experiencia2">- Desarrollador Web en E2 Formación - 3 meses</string>

    <string name="tituloFormacion">Formacion</string>

    <string name="formacion1">- Técnico en Sistemas Microinformáticos y Redes</string>
    <string name="formacion2">- Técnico Superior en Desarrollo de Apliaciones Web</string>
    <string name="formacion3">- Técnico Superior en Desarrollo de Apliaciones Multiplataforma</string>

    <string name="descripcion_imagen">Foto CV</string>
    <string name="telefono">Telefono: 636977123</string>
    <string name="email">Email: raulsantanatilves710@gmail.com</string>
    <string name="instagram">Instagram: @raultilves</string>
    <string name="twitter">Twitter: @SulieTheShy</string>
    <string name="facebook">Facebook: Raúl Santana Tilves</string>
    <string name="alternar_qr_link">Alternar QR/Link</string>

    <string name="enlace"><a href="https://www.linkedin.com/in/ra%C3%BAl-santana-tilves-8709761b8">Mi Linkedin</a></string>
    <string name="iniciar_servicio">Iniciar servicio</string>
    <string name="detener_servicio">Detener servicio</string>
</resources>