<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto">

    <FrameLayout
        android:id="@+id/navbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navbar"
            android:name="com.majadamarcial.proyecto1.NavBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_nav_bar" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/navbarContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical" >

        <TextView
            style="@style/dato_contacto"
            android:text="@string/telefono" />

        <TextView
            style="@style/dato_contacto"
            android:text="@string/email" />

        <TextView
            style="@style/dato_contacto"
            android:text="@string/instagram" />

        <TextView
            style="@style/dato_contacto"
            android:text="@string/twitter" />

        <TextView
            style="@style/dato_contacto"
            android:text="@string/facebook" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>