<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/navbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navbar"
            android:name="com.majadamarcial.proyecto1.NavBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_nav_bar" />

    </FrameLayout>

    <TextView
        android:id="@+id/datosPersonalesTitulo"
        android:text="@string/titulo_datos_personales"
        style="@style/titulo_datos_personales"
        app:layout_constraintBottom_toTopOf="@+id/tablaDatosPersonales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navbarContainer" />

    <TableLayout
        android:id="@+id/tablaDatosPersonales"
        style="@style/tabla_cv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datosPersonalesTitulo">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/columna_nombre"
                style="@style/columna_cv"
                android:text="@string/columna_nombre" />

            <TextView
                android:id="@+id/dato_nombre"
                style="@style/dato_cv"
                android:text="@string/dato_nombre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/columna_fecha"
                style="@style/columna_cv"
                android:text="@string/columna_fecha" />

            <TextView
                android:id="@+id/dato_fecha"
                style="@style/dato_cv"
                android:text="@string/dato_fecha" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/columna_genero"
                style="@style/columna_cv"
                android:text="@string/columna_genero" />

            <TextView
                android:id="@+id/dato_genero"
                style="@style/dato_cv"
                android:text="@string/dato_genero" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/columna_nacionalidad"
                style="@style/columna_cv"
                android:text="@string/columna_nacionalidad" />

            <TextView
                android:id="@+id/dato_nacionalidad"
                style="@style/dato_cv"
                android:text="@string/dato_nacionalidad" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/experienciaLaboralTitulo"
        style="@style/titulo_experiencia_laboral"
        android:text="Experiencia laboral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablaDatosPersonales" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experienciaLaboralTitulo">

        <TextView
            android:id="@+id/experiencia1"
            style="@style/dato_cv"
            android:text="Técnico Informático en Ayto. de La Oliva - 3 meses" />

        <TextView
            android:id="@+id/experiencia2"
            style="@style/dato_cv"
            android:text="Desarrollador Web en E2 Formación - 3 meses" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>